# rag-langchain-learning

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
notebook/: document.ipynb  text_chunking.ipynb
notebooks/: 01_document_loading.ipynb  02_text_chunking.ipynb  03_embeddings.ipynb  04_vector_store.ipynb  05_rag_complete.ipynb
